--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
     "json-server": "^0.17.0",
+    "lucide-react": "^0.456.0",
     "nodemon": "^3.1.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
